# swiss

./: Cargo.toml  go.mod  main.go
assets/: adjectives.txt  colours.txt
cmd/: boxtext.go  catNewline.go  kgForBmi.go  root.go  seqname.go  serve.go  setex.go  week.go  weekstart.go
src/: animalhash.rs  boxtext.rs  cat_with_newline.rs  countext.rs  kg_for_bmi.rs  main.rs  organise.rs  seqname.rs  serve.rs  setex.rs  week.rs
