[package]
name = "swiss"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "*"
glob = "0.3.1"
clap = { version = "4.5.17", features = ["derive"] }
rand = "0.8.5"
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
